duck/test/fail/spec_mismatch.duck
f :: Int -> Int
g x = x
